force-app/main/default/objects/Revenue_Account__c/Revenue_Account__c.object-meta.xml
<CustomObject>
    <label>Revenue Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>