force-app/main/default/objects/Revenue_Account__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Revenue Accounts</relationshipLabel>
    <relationshipName>Revenue_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>