force-app/main/default/objects/Revenue_Account__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GL_Code__c.PL_Category__r.Type__c</field>
            <operation>equals</operation>
            <value>Revenue</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Revenue Accounts</relationshipLabel>
    <relationshipName>Revenue_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>