force-app/main/default/objects/Revenue_Account__c/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota</label>
    <referenceTo>Quota__c</referenceTo>
    <relationshipLabel>Revenue Accounts</relationshipLabel>
    <relationshipName>Revenue_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>