force-app/main/default/objects/Revenue_Account__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Monies brought into the company that is not project driven and can be recurring or non-recurring.</description>
    <label>General</label>
</RecordType>