force-app/main/default/objects/Revenue_Account__c/recordTypes/Time_and_Material.recordType-meta.xml
<RecordType>
    <fullName>Time_and_Material</fullName>
    <active>true</active>
    <description>Monies brought into the company through a one time project.</description>
    <label>Time and Material</label>
</RecordType>